# SmartFarm

./: README.md
Interface-GestionEmployes/projett/: Makefile  Makefile.am  Makefile.in  config.h  config.status  projett.glade  projett.gladep
Interface-GestionEmployes/projett/autom4te.cache/: requests  traces.0  traces.1
Interface-GestionEmployes/projett/po/: Makefile
Interface-GestionEmployes/projett/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  main.c  (+4 more)
Interface-final-integ/Integ/projett/src/: Makefile  Makefile.am  Makefile.in  animal.c  animal.h  callbacks.c  callbacks.h  capteur.c  capteur.h  client.c  equipement.c  equipement.h  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h  main.c  projett
Interface-final-integ/Integ/projett/src/.deps/: animal.Po  callbacks.Po  capteur.Po  equipement.Po  fonction.Po
Projetc/Projetc/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projetc.glade.bak  projetc.gladep.bak
atelier-fichier-final/pfinal/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  pfinal.glade  pfinal.gladep.bak
farm_client/: Makefile  Makefile.am  Makefile.in  client.txt  config.h  config.status  configure  configure.in  fichierf.glade  fichierf.gladep
farm_client/autom4te.cache/: output.0  requests  traces.0  traces.1
farm_client/po/: Makefile  Makefile.in
farm_client/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  client.h  client.txt  fichierf  interface.c  interface.c.bak  interface.h  main.c
(+49 files in other folders)
